Update index.html with new structure and scripts
Refactor HTML structure and include Firebase and React scripts.

--- a/index.html
+++ b/index.html
@@ -1,245 +1,25 @@
-<!DOCTYPE html>
-
+<!doctype html>
 <html lang="en">
-
-<head>
-
-    <meta charset="UTF-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>The 'EA' Maze</title>
-
-    <!-- Importing a rounded font for the vibe -->
-
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
-    <style>
-
-        :root {
-
-            /* Vibe Palette */
-
-            --bg-color: #FFFBF0;       /* Soft Cream */
-
-            --tile-bg: #FFFFFF;        /* White */
-
-            --text-color: #2D3436;     /* Dark Grey */
-
-            --accent-safe: #4ECDC4;    /* Teal */
-
-            --accent-trap: #FF6B6B;    /* Coral */
-
-            --accent-hover: #F7F9F9;
-
-        }
-
-  
-
-        body {
-
-            font-family: 'Poppins', sans-serif;
-
-            background-color: var(--bg-color);
-
-            color: var(--text-color);
-
-            display: flex;
-
-            flex-direction: column;
-
-            align-items: center;
-
-            justify-content: center;
-
-            min-height: 100vh;
-
-            margin: 0;
-
-            padding: 20px;
-
-            box-sizing: border-box;
-
-        }
-
-  
-
-        h1 {
-
-            margin-bottom: 10px;
-
-            font-size: 1.5rem;
-
-            color: #555;
-
-        }
-
-  
-
-        #status-bar {
-
-            margin-bottom: 20px;
-
-            font-weight: 600;
-
-            height: 24px;
-
-        }
-
-  
-
-        #game-grid {
-
-            display: grid;
-
-            grid-template-columns: repeat(6, 1fr); /* 6x6 Grid */
-
-            gap: 10px;
-
-            max-width: 500px;
-
-            width: 100%;
-
-            aspect-ratio: 1 / 1; /* Keep it square */
-
-        }
-
-  
-
-        .tile {
-
-            background: var(--tile-bg);
-
-            border-radius: 12px;
-
-            display: flex;
-
-            align-items: center;
-
-            justify-content: center;
-
-            font-weight: 600;
-
-            font-size: 0.9rem; /* Responsive text base */
-
-            cursor: pointer;
-
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-
-            transition: all 0.2s ease;
-
-            user-select: none;
-
-            position: relative;
-
-        }
-
-  
-
-        /* Mobile Adjustments */
-
-        @media (max-width: 400px) {
-
-            .tile { font-size: 0.7rem; border-radius: 8px; }
-
-            #game-grid { gap: 6px; }
-
-        }
-
-  
-
-        /* Interactive States */
-
-        .tile:hover { transform: translateY(-2px); background: var(--accent-hover); }
-
-        .tile.active {
-
-            background: var(--accent-safe);
-
-            color: white;
-
-            border: 2px solid #2A9D8F;
-
-            transform: scale(1.05);
-
-            box-shadow: 0 6px 12px rgba(78, 205, 196, 0.3);
-
-            z-index: 10;
-
-        }
-
-  
-
-        .tile.visited {
-
-            background: #E0FFFC; /* Very light teal */
-
-            color: #2A9D8F;
-
-        }
-
-  
-
-        /* Error Animation */
-
-        .tile.error {
-
-            background: var(--accent-trap);
-
-            color: white;
-
-            animation: shake 0.4s cubic-bezier(.36,.07,.19,.97) both;
-
-        }
-
-  
-
-        .tile.finish {
-
-            border: 2px dashed var(--text-color);
-
-        }
-
-  
-
-        @keyframes shake {
-
-            10%, 90% { transform: translate3d(-1px, 0, 0); }
-
-            20%, 80% { transform: translate3d(2px, 0, 0); }
-
-            30%, 50%, 70% { transform: translate3d(-4px, 0, 0); }
-
-            40%, 60% { transform: translate3d(4px, 0, 0); }
-
-        }
-
-    </style>
-
-</head>
-
-<body>
-
-  
-
-    <h1>The 'EA' Maze</h1>
-
-    <div id="status-bar">Start at 'Sea' -> Find the Long 'E'!</div>
-
-    <div id="game-grid">
-
-        <!-- Tiles will be injected here by JS -->
-
-    </div>
-
-  
-
-    <!-- IMPORTANT: Note the path includes 'js/' -->
-
-    <script type="module" src="js/main.js"></script>
-
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Put It To The Test</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-slate-50">
+    <div id="root"></div>
+
+    <script>
+      window.firebaseConfig = {};
+      window.initialAuthToken = "";
+      window.appId = "default-app-id";
+    </script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel" src="the%20uses%20of%20put.jsx"></script>
+  </body>
 </html>
-
-
